put back ListOf as a typed list: ListOf<T extends SBase> extends AbstractSBase implements List<T> and corrected the code back to have typed ListOf and avoid unnecessary casting. Corrected Andreas libsbml reader/writer so that it works with the modifications